[gd_scene load_steps=2 format=3 uid="uid://chat_panel"]

[ext_resource type="Script" path="res://scripts/ui/chat_panel.gd" id="1_chat"]

[node name="ChatPanel" type="PanelContainer"]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = -260.0
offset_right = 410.0
offset_bottom = -10.0
grow_vertical = 0
mouse_filter = 1
script = ExtResource("1_chat")

[node name="VBox" type="VBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 4

[node name="ChatLog" type="RichTextLabel" parent="VBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
bbcode_enabled = true
scroll_following = true
custom_minimum_size = Vector2(0, 180)

[node name="InputRow" type="HBoxContainer" parent="VBox"]
layout_mode = 2

[node name="ChatInput" type="LineEdit" parent="VBox/InputRow"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Type a message..."

[node name="SendButton" type="Button" parent="VBox/InputRow"]
unique_name_in_owner = true
layout_mode = 2
text = "Send"
